--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,17 @@ tr {
     border: none;
     text-align: center;
 }
+
+.information {
+    background-color: green;
+    border-radius: 15px 50px;
+    font-size: 20px;
+    /*width: 50%;*/
+    min-height: 150px;
+    margin: 0 auto;
+}
+
+.information > div {
+    width: 70%;
+    margin: 0 auto;
+}
