--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,10 @@ tr {
     /*width: 50%;*/
     min-height: 150px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .information > div {
